# searxng-mcp

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  entrypoint.sh  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  scratch_runner.py  settings.yml  sitemap.xml
.github/workflows/: pipeline.yml
.specify/: summary.json
.specify/searxng-mcp/: results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scripts/: validate_a2a_agent.py
search/: search_index.json
searxng_mcp/: __init__.py  __main__.py  agent.py  agent_server.py  doctor.py  kg_ingest.py  mcp.py  mcp_config.json  mcp_server.py  searxng_a2a.py  searxng_agent.py  searxng_mcp.py  utils.py
searxng_mcp/agent/: IDENTITY.md
searxng_mcp/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
searxng_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
searxng_mcp/embedded/: __init__.py  settings.yml
searxng_mcp/ontology/: __init__.py  certification.json  searxng.ttl
searxng_mcp/ontology/fixtures/: records.json
searxng_mcp/ontology/mappings/: source.yaml
searxng_mcp/ontology/migrations/: manifest.json
searxng_mcp/ontology/shapes/: connector.shacl.ttl
searxng_mcp/prompts/: main_agent.json  search_specialist.json
searxng_mcp/skills/searxng-kg-ingestion/: SKILL.md  WORKFLOW.md
searxng_mcp/skills/searxng-mcp-operations/: SKILL.md
searxng_mcp/skills/searxng-mcp-operations/agents/: openai.yaml
searxng_mcp/skills/searxng-mcp-operations/references/: catalog.md
searxng_mcp/skills/searxng-news-research/: SKILL.md  WORKFLOW.md
searxng_mcp/skills/searxng-search/: SKILL.md
searxng_mcp/skills/searxng-settings-editor/: SKILL.md  WORKFLOW.md
searxng_mcp/skills/searxng-starter/: SKILL.md
searxng_mcp/skills/searxng-web-search/: SKILL.md  WORKFLOW.md
tests/: conftest.py  test_concept_parity.py  test_doctor.py  test_embedded.py  test_init.py  test_init_dynamics.py  test_kg_ingest.py  test_searxng_mcp.py
usage/: index.html
