[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-mcp"
version = "0.1.43"
description = "SearXNG Search Engine MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.26"]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.26"]

agent = [
    "agent-utilities[agent,logfire]>=0.2.26"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.26"]

[project.scripts]
searxng-mcp = "searxng_mcp.mcp_server:mcp_server"
searxng-agent = "searxng_mcp.agent_server:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
searxng_mcp = ["mcp_config.json", "agent_data/**"]

[tool.setuptools]
include-package-data = true
