[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-mcp"
version = "1.0.1"
description = "SearXNG Search Engine MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
# Zero-config self-contained search (searxng_mcp/embedded/): SearXNG ships no
# PyPI release, only a pip-installable git source (setup.py name="searxng",
# package "searx", console_script searxng-run = searx.webapp:run).
embedded = [ "searxng @ git+https://github.com/searxng/searxng.git",]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
searxng-mcp = "searxng_mcp.mcp_server:mcp_server"
searxng-agent = "searxng_mcp.agent_server:agent_server"
searxng-doctor = "searxng_mcp.doctor:main"

[project.entry-points."agent_utilities.skill_providers"]
searxng-mcp = "searxng_mcp.skills"

[project.entry-points."agent_utilities.ontology_providers"]
searxng-mcp = "searxng_mcp.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
searxng-mcp = "searxng_mcp.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
searxng-mcp = "searxng_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
searxng_mcp = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**", "embedded/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
