[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-mcp"
version = "1.1.0"
description = "SearXNG Search Engine MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=1.27.1,<2.0.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
# Zero-config self-contained search (searxng_mcp/embedded/): SearXNG ships no
# PyPI release, only a pip-installable git source (setup.py name="searxng",
# package "searx", console_script searxng-run = searx.webapp:run).
embedded = [ "searxng @ git+https://github.com/searxng/searxng.git@9e25585aecd9f6ab1fdf30922da64fd91eb25425",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
searxng-mcp = "searxng_mcp.mcp_server:mcp_server"
searxng-agent = "searxng_mcp.agent_server:agent_server"
searxng-doctor = "searxng_mcp.doctor:main"

[project.entry-points."agent_utilities.skill_providers"]
searxng-mcp = "searxng_mcp.skills"

[project.entry-points."agent_utilities.ontology_providers"]
searxng-mcp = "searxng_mcp.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
searxng-mcp = "searxng_mcp.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
searxng-mcp = "searxng_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
searxng_mcp = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**", "embedded/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]

[tool.uv.extra-build-dependencies]
# The `searxng` git dependency (the [embedded] extra) uses a legacy setup.py
# that executes `searx/__init__.py` at build-metadata time — which calls
# init_settings() at MODULE level, pulling in most of searx's own runtime
# requirements.txt just to compute the package version/metadata, none of
# which it declares as a build dependency. Without this, `uv`'s isolated
# build environment can't even resolve the package (fails before its own
# requirements.txt is ever consulted). Upstream packaging quirk, not ours to
# fix; this is uv's own documented workaround — mirrors searx/requirements.txt.
searxng = [
    "certifi", "babel", "flask-babel", "flask", "jinja2", "lxml>=6.1.0", "pygments",
    "python-dateutil", "pyyaml", "httpx", "httpx-socks", "sniffio", "valkey",
    "markdown-it-py", "msgspec", "typer", "isodate", "whitenoise",
    "typing-extensions",
]
